--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,22 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE HTML>
+
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Match the first png</title>
+        <link rel="stylesheet" href="index.css">
+        <meta name="author" content="Michael Flanders">
+    </head>
+    <body>
+        <header></header>
+        <main>
+            <div class='leftSection'></div>
+            <div class='middleSection'>
+                <div class='middleMain'></div>
+                <footer></footer>
+            </div>
+            <div class='rightSection'></div>
+        </main>
+    </body>
+</html>
