--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,24 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE HTML>
+
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Match the first png</title>
+        <link rel="stylesheet" href="index.css">
+        <meta name="author" content="Michael Flanders">
+    </head>
+    <body>
+        <header>
+            <div id='purpleBox'></div>
+            <div id='greenBox'></div>
+            <div id='blueBox'></div>
+        </header>
+        <main>
+            <div id='mainBox'></div>
+        </main>
+        <footer>
+            HELLO FRIENDS
+        </footer>
+    </body>
+</html>
