--- a/third/index.html
+++ b/third/index.html
@@ -1,1 +1,11 @@
 <!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE HTML>
+
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+        <title>Match the first png</title>
+        <link rel="stylesheet" href="index.css">
+        <meta name="author" content="Michael Flanders">
+    </head>
+</html>
