--- a/second/index.html
+++ b/second/index.html
@@ -4,7 +4,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Match the first png</title>
+        <title>Match the second png</title>
         <link rel="stylesheet" href="index.css">
         <meta name="author" content="Michael Flanders">
     </head>
