--- a/third/index.html
+++ b/third/index.html
@@ -4,8 +4,28 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Match the first png</title>
+        <title>Match the third png</title>
         <link rel="stylesheet" href="index.css">
         <meta name="author" content="Michael Flanders">
     </head>
+    <body>
+        <section class="graySection">
+            <div class="blueBox"></div>
+        </section>
+        <main>
+            Consider hiding the staus bar-and all other app
+             UI-while people are actively viewing full-screen
+              media. If you hide the status bar, be sure to 
+              let people retrieve it(and the appropriate app 
+              UI) with a single tap. Unless you have a 
+              compelling reason to do so, avoid defining a custom 
+              gesture to redisplay the status bar because users 
+              are unlikely to discover such a gesture or to 
+              remember it.
+        </main>
+        <section class="blueSection"></section>
+        <section class="aquaSection"></section>
+        <section class="oliveSection"></section>
+        <section class="yellowSection"></section>
+    </body>
 </html>
