First re-done (after viewing solution/reviewing)

--- a/first/index.html
+++ b/first/index.html
@@ -11,12 +11,12 @@
     <body>
         <header></header>
         <main>
-            <div class='leftSection'></div>
+<!--            <div class='leftSection'></div> -->
             <div class='middleSection'>
                 <div class='middleMain'></div>
                 <footer></footer>
             </div>
-            <div class='rightSection'></div>
+<!--            <div class='rightSection'></div> -->
         </main>
     </body>
 </html>
